--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About Natural Bridge</h3>
-    <p> Natural Bridge is a Kentucky Natural Landmark. Formed by a sandstone arch, this bridge sits 65 feet above the ground and is approximately 78 feet long. Due to its size, scenic views, and accessibility, it is one of the most popular spots in Red River Gorge, Natural Bridge State Park. Check it out here!
+    <p> Natural Bridge is a Kentucky Natural Landmark. Formed by a sandstone arch, this bridge sits 65 feet above the ground and is approximately 78 feet long. Due to its size, scenic views, and accessibility, it is one of the most popular spots in Red River Gorge, Natural Bridge State Park. (http://www.redrivergorge.com/). Due to the popularity of this natural wonder, this page hopes to help interested readers learn more about the geographic elements of the natural arch. In doing so, readers can measure and visualize Natural Bridge from their own homes. 
     </p>
   </div>
   <!-- Project Section -->
@@ -71,6 +71,26 @@
     </div>  
   </div>
 
+  
+  <!-- Image  -->
+  <div class="w3-container">
+    <img src="Images/Natural Bridge sideview.jpg" class="w3-image" style="width:100%">
+</div>
+Photo by: Joe Tennis
+  
+  <!-- Image  -->
+<div class="w3-container">
+  <img src="Images/Natural Bridge.jpg" class="w3-image" style="width:100%">
+</div>
+Photo by: http://www.redrivergorge.com/
+
+
+  <!-- Image  -->
+  <div class="w3-container">
+    <img src="Images/Natural Bridge Zinn.jpg" class="w3-image" style="width:100%">
+  </div>
+   Photo by: Robert Zinn
+  
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
@@ -82,6 +102,14 @@
     <p>Email: gma242@uky.edu</p>
     <p>Louisville, Kentucky</p>
   </div>
+
+    <!-- Data Section -->
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Data</h3>
+   Site was produced by Gregory Madden for the University of Kentucky Department of Geography, Spring 2021. This presentation is part of a final project in GEO 409.
+
+    Elevation data was acquired from the Kentucky's Elevation Data & Aerial Photography Program (KyFromAbove.ky.gov). Color aerial imagery was acquired from the National Agriculture Imagery Program (NAIP) stored on public FTP server maintained by Kentucky Division of Geographic Information (DGI)
+    
+    Various ArcGIS Pro lidar and digital surface model tools were used to process and analyze these data. A Python script was developed to automate this process and is found in this Jupyter Notebook.
 
 <!-- Footer -->
 <footer class="w3-center w3-blue-gray w3-padding-16">
