--- a/page1.html
+++ b/page1.html
@@ -30,6 +30,12 @@
   </div>
 </header>
 
+<!-- About Section -->
+   <div class="w3-container w3-padding-32" id="about">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About This Project</h3>
+    </p> This animated point cloud shows Natural Bridge from various angles. The camera flies towards and around the bridge to show this natural landmark. The points are colored by the 2018 color aerial photography. Ground features covered by tree canopy are colored by the top of the canopy.   
+  </div>
+
 <!-- End page content -->
 </div>
 
