--- a/page2.html
+++ b/page2.html
@@ -28,13 +28,12 @@
   <iframe width="100%" height="500px" src="https://cesium.com/ion/stories/viewer/?id=d6f18af6-94d2-47df-99a0-87f8e638cb0b" frameborder="0" allowfullscreen></iframe>
   <div class="w3-display-middle w3-margin-top w3-center">
    
-  </div>
-</header>
+</div>
 
  <!-- About Section -->
  <div class="w3-container w3-padding-32" id="about">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About This Project</h3>
-  </p> This project challenged me to make an interactive web map. While focusing on the public transit system in Lexington, I was able to map the proximity of some of Lexington's most important public amenities: schools, hospitals, and parks. Looking at this map, it is apparant that city planners did consider transportation to many of these locations. Can you find which Lexington school has the highest enrollment rate?   
+  </p> This virtual tour shows Natural Bridge from various frames and was created using point cloud data on Cesium Ion.    
 </div>
 
 <!-- End page content -->
