--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About Natural Bridge</h3>
-    <p> Natural Bridge is a Kentucky Natural Landmark. Formed by a sandstone arch, this bridge sits 65 feet above the ground and is approximately 78 feet long. Due to its size, scenic views, and accessibility, it is one of the most popular spots in Red River Gorge, Natural Bridge State Park. (http://www.redrivergorge.com/). Due to the popularity of this natural wonder, this page hopes to help interested readers learn more about the geographic elements of the natural arch. In doing so, readers can measure and visualize Natural Bridge from their own homes. 
+    <p> Natural Bridge is a Kentucky Natural Landmark. Formed by a sandstone arch, this bridge sits 65 feet above the ground and is approximately 78 feet long. Due to its size, scenic views, and accessibility, it is one of the most popular spots in Red River Gorge, Natural Bridge State Park. (http://www.redrivergorge.com/). Due to the popularity of this natural wonder, this page hopes to help interested readers learn more about the geographic elements of this natural arch. In doing so, readers can measure and visualize Natural Bridge from their own homes. 
     </p>
   </div>
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="maps">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Natural Arch Exploration</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Natural Bridge Exploration</h3>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-col l4 m4 w3-margin-bottom"> <!--see https://www.w3schools.com/w3css/w3css_grid.asp -->
       <a href="page1.html" class="w3-hover-grayscale"> <!-- makes image into a link -->
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-blue-gray w3-padding">Animation of Natural Arch</div>
+        <div class="w3-display-topleft w3-blue-gray w3-padding">Animation of Natural Bridge</div>
         <img src="Images/Animation.jpg" alt="House" style="width:100%">
       </div>
     </a> <!-- end link -->
@@ -56,7 +56,7 @@
     <div class="w3-col l4 m4 w3-margin-bottom"> <!--see https://www.w3schools.com/w3css/w3css_grid.asp -->
       <a href="page2.html" class="w3-hover-grayscale"> <!-- makes image into a link -->
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-blue-gray w3-padding">Virtual Tour of Natural Arch</div>
+        <div class="w3-display-topleft w3-blue-gray w3-padding">Virtual Tour of Natural Bridge</div>
         <img src="Images/Tour.jpg" alt="House" style="width:100%">
       </div>
     </a> <!-- end link -->
@@ -64,7 +64,7 @@
     <div class="w3-col l4 m4 w3-margin-bottom"> <!--see https://www.w3schools.com/w3css/w3css_grid.asp -->
       <a href="page3.html" class="w3-hover-grayscale"> <!-- makes image into a link -->
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-blue-gray w3-padding">Site Map of Natural Arch</div>
+        <div class="w3-display-topleft w3-blue-gray w3-padding">Site Map of Natural Bridge</div>
         <img src="Images/Site_Map.jpg" alt="House" style="width:100%">
       </div>
     </a> <!-- end link -->
