--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1200px;" id="home">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/PkhUWl-QbWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="100%" height="315" src="https://www.youtube.com/embed/PkhUWl-QbWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="w3-display-middle w3-margin-top w3-center">
    
   </div>
